--- a/my-nuxt-app/package.json
+++ b/my-nuxt-app/package.json
@@ -17,15 +17,17 @@
     "axios": "^0.19.2",
     "dayjs": "^1.8.20",
     "element-ui": "^2.13.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.11.0",
     "vee-validate": "^3.2.5",
     "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^4.0.0"
   }
 }
