API呼び出しを環境変数に設定 #8

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     stdin_open: true
     tty: true
     environment:
-      USER_URL: http://localhost:8080/users/
+      USER_URL: http://localhost:8080
+      POST_URL: http://localhost:8090
     working_dir: /app/my-nuxt-app
     command: npm run dev
     networks:
