--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,11 @@ jobs:
           name: create docker network
           command: docker network create my_network
 
-
-      - run:
-          name: dockerize をインストール
-          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-          environment:
-            DOCKERIZE_VERSION: v0.3.0
-
       - run:
           name: docker-compose up
           command: docker-compose up -d
 
-      - run: dockerize -wait tcp://127.0.0.1:3000 -timeout 120s
+      - run: ping 127.0.0.1 -c 5
 
       - run:
           name: lint
