コマンドミスを修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       USER_URL: http://localhost:8080
       POST_URL: http://localhost:8090
     working_dir: /app/my-nuxt-app
-    command: npm install && npm run dev
+    command: >
+      ash -c 'npm install &&
+      npm run dev'
     networks:
       - my_network
 
