--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
     working_dir: /app/my-nuxt-app
     command: >
       ash -c 'npm install &&
-      npm run dev'
-    networks:
+      npm run build &&
+      npm run start'
+      networks:
       - my_network
 
 networks:
