--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,9 @@ services:
     working_dir: /app/my-nuxt-app
     command: >
       ash -c 'npm install &&
-      npm run build &&
-      npm run start'
-      networks:
-      - my_network
+      npm run dev'
+    networks:
+    - my_network
 
 networks:
   my_network:
