--- a/front-service.yaml
+++ b/front-service.yaml
@@ -3,9 +3,8 @@ kind: Service
 metadata:
   name: front
 spec:
-  type: LoadBalancer
   selector:
-    app: front
+    back: front
   ports:
   - port: 80
     targetPort: 3000
